# algotrading

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
algotrade/: __init__.py
algotrade/backtesting/: __init__.py  backtest.py  forward_test.py
algotrade/data/: __init__.py  loader.py  symbols.py
algotrade/execution/: __init__.py  broker.py
algotrade/features/: __init__.py  pipeline.py
algotrade/models/: __init__.py  base_model.py  factory.py  losses.py  lstm.py  transformer.py
algotrade/training/: __init__.py  trainer.py
algotrade/utils/: __init__.py
config/: default.yaml
config/data/: nasdaq100.yaml  spy.yaml
config/experiments/: daily_multi_symbol.yaml  mvp_spy_lstm.yaml  nasdaq100.yaml  spy_magnitude_regression.yaml  transformer_large.yaml
scripts/: backtest.py  paper_trade.py  train.py
